CAY-2871 QualifierTranslator breaks on a relationship with a compound FK
CAY-2872 CayenneModeler "Documentation" link is broken
CAY-2876 Memory leak in the ObjectStore
CAY-2879 Negative number for non parameterized ObjectSelect query not processed correctly
CAY-2883 License and notice templates are not processed by the Gradle build
CAY-2885 Modeler: DbImport fails to load DB schema view

----------------------------------
Release: 5.0-M1
Date: Aug 28, 2024
----------------------------------
Changes/New Features:

CAY-2378 Switch usage of SelectQuery to ObjectSelect internally
CAY-2498 Rename packages to prevent crossing package names
CAY-2597 case-when implementation
CAY-2715 Support ANY and ALL expressions for subqueries
CAY-2737 Cayenne 5.0: cleanup deprecated code
CAY-2741 Cleanup TransactionDescriptor and deprecate DefaultTransactionDescriptor
CAY-2742 Switch minimum required Java version to 11
CAY-2744 Remove ROP support
CAY-2746 Cleanup root pom.xml
CAY-2747 Update project XML version to 11
CAY-2751 Simplify DataNode configuration
CAY-2752 Rename queryTemplate to dataMapTemplate in the cgen config
CAY-2753 Remove VPP support in the ant task
CAY-2754 Add SELF property to the cgen templates
CAY-2756 Modeler: simplify cgen UI
CAY-2757 Modeler: Create custom templates from defaults
CAY-2758 Refactoring code for a extended TemplateType class
CAY-2759 Add utility methods to the SELF property
CAY-2760 ObjectContext.userProperties need a way to clear properties
CAY-2761 Modeler: Editor for the cgen templates
CAY-2766 Modeler: Improving the work with velocity templates for class generation
CAY-2767 Modeler: upgrade deprecated code in custom components
CAY-2771 Switch to GitHub actions
CAY-2773 Switch master to "5.0"
CAY-2776 Upgrade Gradle to 7.6
CAY-2780 Modeler: Multiple configurations for classes generation
CAY-2781 Enable 'Create PK properties' by default in the cgen configuration
CAY-2784 Remove 'Use Java primitive types' option from dbimport